--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-imask": "^7.6.0",
+    "react-number-format": "^5.3.4",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.3.12",
     "react-router-dom": "^6.22.3",
