--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/x-date-pickers": "^7.2.0",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "i18next": "^23.11.3",
     "lucide-react": "^0.368.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-i18next": "^14.1.1",
     "react-imask": "^7.6.0",
     "react-number-format": "^5.3.4",
     "react-phone-input-2": "^2.15.1",
